# fastapi-microservices

./: README.md  docker-compose.yml
book_service/: .env  Dockerfile  pyproject.toml
book_service/app/: main.py
book_service/app/api/: db.py  db_manager.py  models.py  routes.py  service.py  settings.py
