[tool.poetry]
name = "book-service"
version = "0.1.0"
description = ""
authors = ["Daniel Wardega"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
SQLAlchemy = "^2.0.30"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"
pydantic_settings = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
